Fixed bug #28228 (number_format() does not allow empty decimal separator).